--- a/LogSocketClient/index.html
+++ b/LogSocketClient/index.html
@@ -75,12 +75,12 @@ Top right buttons: Stackable dropdown menus.
 			<span class="fgDisco">server:&nbsp;</span><span id="amrtSID" class="mnspcd">?<!-- [JS] --></span>
 	<br/>
 			<span class="fgDisco">System message colors:</span><!-- #7e821f32 -->
-			<span class="bgD0 smallr"><nobr>&nbsp;<span class="mnspcd">%</span>Client</nobr>&nbsp;</span>
-			<span class="bgS0 smallr"><nobr>&nbsp;<span class="mnspcd">!</span>Server</nobr>&nbsp;</span>
-			<span class="bgL0 smallr"><nobr>&nbsp;<span class="mnspcd">/</span>LogSocket</nobr>&nbsp;</span>
-			<span class="bgB0 smallr"><nobr>&nbsp;<span class="mnspcd">/</span>Buffers</nobr>&nbsp;</span>
-			<span class="bgE0 smallr"><nobr>&nbsp;Eval,</nobr> <nobr>Error,</nobr> <nobr>Warn</nobr>&nbsp;</span>
-			<span class="bgF0 smallr"><nobr>&nbsp;Fail</nobr>&nbsp;</span>
+			<span class="bgD0 smallr">&nbsp;Client&nbsp;</span>
+			<span class="bgS0 smallr">&nbsp;Server&nbsp;</span>
+			<span class="bgL0 smallr">&nbsp;LogSocket&nbsp;</span>
+			<span class="bgB0 smallr">&nbsp;Buffers&nbsp;</span>
+			<span class="bgE0 smallr">&nbsp;Eval, Error, Warn&nbsp;</span>
+			<span class="bgF0 smallr">&nbsp;Fail&nbsp;</span>
 		</td>
 	</tr></table>
 </div>
