--- a/LogSocketClient/index.html
+++ b/LogSocketClient/index.html
@@ -32,10 +32,9 @@
 
 
 <!-- Header/Config/Info >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
-<div  class="smallr">
-	<table style="border-spacing:0px;"><tr>
-		<td rowspan="3" style="vertical-align:top;">
-			<div id="titleID"
+<table style="border-spacing:0px;"><tr>
+	<td rowspan="3" style="vertical-align:top;">
+		<div id="titleID"
 title="TODO #3c7fc2f Help menu
 * Tested only for Chrome browser *
 
@@ -48,10 +47,12 @@ GUI design:
 Top left button(s): Info dropdown window(s).
 Top middle: GUI messages/alerts.
 Top right buttons: Stackable dropdown menus.
-">&nbsp;LogSocket&nbsp;<br/>&Tilde;&nbsp;Client&nbsp;&Tilde;</div><!-- &Tilde; != &tilde; -->
-		</td>
-		<td>&nbsp;&nbsp;</td>
-		<td>
+">&nbsp;LogSocket&nbsp;<br/>&Tilde;&nbsp;Client&nbsp;&Tilde;
+		</div><!-- &Tilde; != &tilde; -->
+	</td>
+	<td>&nbsp;&nbsp;</td>
+	<td>
+		<div  class="smallr">
 			<span class="fgDisco">session ID = </span><span id="sessID" class="mnspcd"><!-- [JS] --></span>
 	<br/>
 			<span class="fgDisco">Config: </span>
@@ -81,9 +82,9 @@ Top right buttons: Stackable dropdown menus.
 			<span class="bgB0 smallr">&nbsp;Buffers&nbsp;</span>
 			<span class="bgE0 smallr">&nbsp;Eval, Error, Warn&nbsp;</span>
 			<span class="bgF0 smallr">&nbsp;Fail&nbsp;</span>
-		</td>
-	</tr></table>
-</div>
+		</div>
+	</td>
+</tr></table>
 <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Header/Config/Info -->
 
 <!-- --Line Spacer-- --><div id="wdthTst" class="lineSpacer"></div>
