Websocket command sigils streamlined
But now a bug can cause infinite recursion

--- a/LogSocketClient/index.html
+++ b/LogSocketClient/index.html
@@ -302,7 +302,7 @@ title="TODO">Remove user colors</span></div>
 
 
 <div class="contextMenu" id="contxtMenu3ID">
-	<div class="active" onclick="_stopLggr()">
+	<div class="active" onclick="_addFltrRl()">
 		Add filter rule<br/>
 		&nbsp;&nbsp;<span class="mnspcd fgBlack" id="ctxMn3fltrID"><!-- [JS] --></span><span class="mnspcd fgBlack" id="ctxMn3fltrResID"><!-- [JS] --></span>
 	</div>
