--- a/LogSocketClient/index.html
+++ b/LogSocketClient/index.html
@@ -264,7 +264,7 @@ title="...even if empty.
 title="Else save in LogSocketServer.properties
 when server shuts down
 //TODO #7f344280">
-			<input type="checkbox" onclick=""/>Dont't save</label>
+			<input type="checkbox" onclick="" checked disabled/>Dont't save</label>
 		
 		
 		<form id="TESTcmdsID" class="fgDisco smallr">
